syntax = "proto3";

package orchestration;
option go_package = "github.com/SteeperMold/Calculator-go/orchestrator";

message GetTaskResponse {
  int64 expression_id = 1;
  int64 node_id = 2;
  double arg1 = 3;
  double arg2 = 4;
  string operation = 5;
  int32 operation_time = 6;
}

message PostTaskResult {
  int64 expression_id = 1;
  int64 node_id = 2;
  double result = 3;
}

message Empty {}

service Orchestrator {
  rpc FetchTask (Empty) returns (GetTaskResponse);

  rpc SendResult (PostTaskResult) returns (Empty);
}
